# fiftysevenproblems

cpp/baseproject/baseproject/: main.cpp
cpp/ch2p1/: clean.sh
cpp/ch2p1/baseproject/: main.cpp
cpp/ch2p2/baseproject/: main.cpp
cpp/ch2p3/: build.sh  incremental_run.sh  run.sh
cpp/ch2p3/baseproject/: main.cpp
cpp/ch2p4/baseproject/: main.cpp
cpp/ch2p5/baseproject/: main.cpp
cpp/ch2p6/: CMakeLists.txt
cpp/ch2p6/baseproject/: main.cpp
